--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,23 @@
 server:
   port: 8082
+
 logging:
   level:
     org.springframework: DEBUG
+
 spring:
+  messages:
+    basename: message
+
   datasource:
-    driver-class-name: oracle.jdbc.driver.OracleDriver
+    driver-class-name: oracle.jdbc.OracleDriver
     url: jdbc:oracle:thin:@localhost:1521:XE
     username: metajobs
     password: 1234
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+
 #mybatis ??
 #mybatis:
 #  mapper-locations: classpath:mapper/*.xml
