--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.7.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.4.10</version>
+        </dependency>
+
+
 <!--        hateoas-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
