--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,6 @@ spring:
     username: metajobs
     password: 1234
 #mybatis ??
-#mybatis:
-#  mapper-locations: classpath:mapper/*.xml
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
 #  type-aliases-package: com.example.restservice.user
