--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,25 @@
 server:
   port: 8082
+
 logging:
   level:
     org.springframework: DEBUG
+
 spring:
+  messages:
+    basename: message
+
+  h2:
+    console:
+      enabled: true
+
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@localhost:1521:XE
     username: metajobs
     password: 1234
+
 #mybatis ??
-#mybatis:
-#  mapper-locations: classpath:mapper/*.xml
-#  type-aliases-package: com.example.restservice.user
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+#  type-aliases-package: com.example.metajobs
