--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,5 +20,5 @@ spring:
     password: 1234
 
 mybatis:
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.example.metajobs
