--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,11 +21,6 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-
-#mybatis ??
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-#  type-aliases-package: com.example.restservice.user
-
+  type-aliases-package: com.example.metajobs.vo
 #  type-aliases-package: com.example.metajobs
 
